# home-credit-risk

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ingestion/: Dockerfile
ingestion/scripts/: load_to_gcs.py
orchestration/airflow/: Dockerfile
orchestration/airflow/dags/: home_credit_pipeline.py
transform/dbt_home_credit/: dbt_project.yml  packages.yml
