[project]
name = "home-credit-risk"
version = "0.1.0"
description = "Production-grade credit risk analytics platform built on the modern data stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.9.0",
    "kaggle>=2.0.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "unzip>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
